--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,6 +108,24 @@
   margin-left: 0.5rem;
 }
 
+.ex_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+
+.ex_container > input {
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  border: 1px solid #eaeaea;
+  border-radius: 0.25rem;
+  font-size: 1rem;  
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
