--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,23 +108,39 @@
   margin-left: 0.5rem;
 }
 
-.ex_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
+.title {
+  font-size: 2rem;
 }
 
 
-.ex_container > input {
+
+.input_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input_container > input {
   width: 100%;
-  padding: 0.5rem;
+  padding: 1rem;
   margin: 0.5rem 0;
   border: 1px solid #eaeaea;
   border-radius: 0.25rem;
   font-size: 1rem;  
 }
+
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+.label {
+  margin-right: 0.5rem;
+  font-size: 4rem;
+}
+
 
 @media (max-width: 600px) {
   .grid {
